# tiny-ingestion-machine

./: .gitignore  Taskfile.yml  pyproject.toml
src/stream_ingest/: __init__.py  admin.py  broker.py  config.py  consumer.py  ingestion_pb2.py  ingestion_pb2.pyi  ingestion_pb2_grpc.py  producer.py
src/stream_ingest/proto/: ingestion.proto
